[project]
name = "mcp_polygon"
version = "0.4.0"
description = "A MCP server project"
requires-python = ">=3.13"
dependencies = [
    "polygon-api-client>=1.15.3",
    "python-dotenv>=1.0.1",
    "mcp[cli]>=1.13.1",
]


[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.pdm.scripts]
mcp_polygon = "mcp_polygon:run_stdio"
dev = "python entrypoint.py"
